--- a/.github/workflows/promote-packages.yaml
+++ b/.github/workflows/promote-packages.yaml
@@ -111,12 +111,10 @@ jobs:
           fi
         done
         
-        echo "package_name=$PACKAGE_NAME" >> "$GITHUB_OUTPUT"
+        echo "package_name=$PACKAGE_NAME" >> $GITHUB_ENV
     
     - name: Commit and create PR
       uses: peter-evans/create-pull-request@v5
-      env:
-        package_name: ${{ env.package_name }}
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         path: ${{ env.O3DE_REPO_PATH }}
