--- a/.github/workflows/promote-packages.yaml
+++ b/.github/workflows/promote-packages.yaml
@@ -104,7 +104,7 @@ jobs:
             sample_line=$(awk '/# platform-specific/{getline; print}' "$FILE_PATH")
 
             spaces_before_targets=$(echo "$sample_line" | awk -F'PACKAGE_NAME|TARGETS' '{print length($1) - length("ly_associate_package(PACKAGE_NAME ") - length($file)}')
-            spaces_before_hash=$(echo "$sample_line" | awk -F'TARGETS|PACKAGE_HASH' '{print length($1) - length("ly_associate_package(PACKAGE_NAME ") - length($file) - length(" TARGETS ") - length($PARTIAL_PACKAGE_NAME}')
+            spaces_before_hash=$(echo "$sample_line" | awk -F'TARGETS|PACKAGE_HASH' '{print length($1) - length("ly_associate_package(PACKAGE_NAME ") - length($file) - length(" TARGETS ") - length($PARTIAL_PACKAGE_NAME)}')
             new_line=$(printf "ly_associate_package(PACKAGE_NAME %s%-*sTARGETS %s%-*sPACKAGE_HASH %s" "$file" $spaces_before_targets "" "$PARTIAL_PACKAGE_NAME" $spaces_before_hash "" "$hash")
 
             grep -q "$PARTIAL_PACKAGE_NAME" "$FILE_PATH"
