--- a/.github/workflows/promote-packages.yaml
+++ b/.github/workflows/promote-packages.yaml
@@ -100,12 +100,19 @@ jobs:
 
             FILE_PATH="${{ env.O3DE_REPO_PATH }}/cmake/3rdParty/Platform/${PLATFORM^}/$CMAKE_FILE"
             
-            # Sample the first line after the comment "#platform-specific" to detect spaces
-            sample_line=$(awk '/# platform-specific/{getline; getline; print}' "$FILE_PATH")
+            # Sample the first line after the comment "#platform-specific" to detect column widths
+            sample_line=$(awk '/#platform-specific/{getline; print}' "$FILE_PATH")
 
-            spaces_before_targets=$(echo "$sample_line" | awk -F'PACKAGE_NAME|TARGETS' '{print length($1) - length($file)}')
-            spaces_before_hash=$(echo "$sample_line" | awk -F'TARGETS|PACKAGE_HASH' '{print length($1) - length($PARTIAL_PACKAGE_NAME)}')
-            new_line=$(printf "ly_associate_package(PACKAGE_NAME %s%*sTARGETS %s%*sPACKAGE_HASH %s" "$file" $spaces_before_targets "" "$PARTIAL_PACKAGE_NAME" $spaces_before_hash "" "$hash")
+            # Detect the column width between the beginning of the line and "TARGETS"
+            targets_start=$(echo "$sample_line" | awk '{print index($0, "TARGETS")}')
+            width_before_targets=$((targets_start - 1))
+
+            # Detect the column width between "TARGETS" and "PACKAGE_HASH"
+            package_hash_start=$(echo "$sample_line" | awk '{print index($0, "PACKAGE_HASH")}')
+            width_before_hash=$((package_hash_start - targets_start - 7))  # Subtracting 7 for the length of "TARGETS"
+
+            # Construct the new line using printf with the detected widths
+            new_line=$(printf "ly_associate_package(PACKAGE_NAME %-*s TARGETS %-*s PACKAGE_HASH %s" $width_before_targets "$file" $width_before_hash "$PARTIAL_PACKAGE_NAME" "$hash")
 
             grep -q "$PARTIAL_PACKAGE_NAME" "$FILE_PATH"
             if [ $? -eq 0 ]; then
