--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -48,6 +48,9 @@ jobs:
         
         		DIFF=$(git diff ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} --no-ext-diff --unified=0 --exit-code -a --no-prefix -- $FILE \
               | egrep "^\+" | grep Scripts)
+            if [[ $? -ne 0 ]]; then
+              echo No valid build change found. Exiting with non-zero
+            fi
         		PACKAGE=$(echo $DIFF | cut -d'"' -f2)
         
         		JSONline="{\"package\": \"$PACKAGE\", \"os\": \"$OS_RUNNER\"},"
