--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -27,6 +27,7 @@ jobs:
       id: detect-platform
       run: |
         CHANGED_FILES=$(git diff ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} --name-only)
+        # Construct the package and os into a json string to be consumed by Github Actions runners
         JSON="{\"include\":["
         for FILE in $CHANGED_FILES; do
         	if [[ $FILE == package_build_list_host_* ]]; then
@@ -46,12 +47,14 @@ jobs:
         			;;
         		esac
         
-        		DIFF=$(git diff ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} --no-ext-diff --unified=0 --exit-code -a --no-prefix -- $FILE \
-              | egrep "^\+" | grep Scripts)
+        		DIFF=$(git diff ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} --no-ext-diff --unified=0 \
+                    --exit-code -a --no-prefix -- $FILE | egrep "^\+" | grep Scripts)
+
             if [[ $? -ne 0 ]]; then
               echo No valid build change found. Exiting with non-zero
             fi
-        		PACKAGE=$(echo $DIFF | cut -d'"' -f2)
+            
+            PACKAGE=$(echo $DIFF | cut -d'"' -f2)
         
         		JSONline="{\"package\": \"$PACKAGE\", \"os\": \"$OS_RUNNER\"},"
         		if [[ "$JSON" != *"$JSONline"* ]]; then
