--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -1,4 +1,4 @@
-# This automation builds 3p packages based on a PR or manually run
+# This automation builds 3p packages based on a PR
 
 name: Build 3P Packages
 
@@ -30,37 +30,37 @@ jobs:
         # Construct the package and os into a json string to be consumed by Github Actions runners
         JSON="{\"include\":["
         for FILE in $CHANGED_FILES; do
-        	if [[ $FILE == package_build_list_host_* ]]; then
-        		PLATFORM=$(echo $FILE | sed -n 's/package_build_list_host_\(.*\).json/\1/p')
-        		case $PLATFORM in
-        		linux*)
-        			OS_RUNNER="ubuntu-latest"
-        			;;
-        		windows)
-        			OS_RUNNER="windows-2019"
-        			;;
-        		darwin)
-        			OS_RUNNER="macos-latest"
-        			;;
-        		*)
-        			OS_RUNNER="windows-latest" # default
-        			;;
-        		esac
-        
-        		DIFF=$(git diff ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} --no-ext-diff --unified=0 \
-                    --exit-code -a --no-prefix -- $FILE | egrep "^\+" | grep Scripts)
+          if [[ $FILE == package_build_list_host_* ]]; then
+            PLATFORM=$(echo $FILE | sed -n 's/package_build_list_host_\(.*\).json/\1/p')
+            case $PLATFORM in
+            linux*)
+              OS_RUNNER="ubuntu-latest"
+              ;;
+            windows)
+              OS_RUNNER="windows-2019"
+              ;;
+            darwin)
+              OS_RUNNER="macos-latest"
+              ;;
+            *)
+              OS_RUNNER="windows-latest" # default
+              ;;
+            esac
+
+            DIFF=$(git diff ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} --no-ext-diff --unified=0 \
+                        --exit-code -a --no-prefix -- $FILE | egrep "^\+" | grep Scripts) # Get oly the changes that can be built
 
             if [[ $? -ne 0 ]]; then
               echo No valid build change found. Exiting with non-zero
             fi
-            
+          
             PACKAGE=$(echo $DIFF | cut -d'"' -f2)
-        
-        		JSONline="{\"package\": \"$PACKAGE\", \"os\": \"$OS_RUNNER\"},"
-        		if [[ "$JSON" != *"$JSONline"* ]]; then
-        			JSON="$JSON$JSONline"
-        		fi
-        	fi
+      
+            JSONline="{\"package\": \"$PACKAGE\", \"os\": \"$OS_RUNNER\"},"
+            if [[ "$JSON" != *"$JSONline"* ]]; then
+              JSON="$JSON$JSONline"
+            fi
+          fi
         done
 
         # Remove last "," and add closing brackets
@@ -87,7 +87,7 @@ jobs:
         
     - name: Check if package already exists in prod
       env:
-        PROD_CDN: "https://d3t6xeg4fgfoum.cloudfront.net"
+        PROD_CDN: ${{ vars.PROD_CDN }} # Change this to compare on your own endpoint
       run: |
         url="${{ env.PROD_CDN }}/${{ matrix.package }}"
         if curl --head --silent --fail ${url}.tar.xz > /dev/null 2>&1; then
@@ -97,7 +97,7 @@ jobs:
           echo ${{ matrix.package }} does not exist in CDN, continuing...
           exit 0
         fi
-    
+
     - name: Malware scan of repo
       uses: dell/common-github-actions/malware-scanner@main
       with:
@@ -132,7 +132,7 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-        cache: 'pip' # caching pip dependencies
+        cache: 'pip'
     
     - name: Install python dependancies
       run: |
@@ -177,7 +177,7 @@ jobs:
       with:
         arch: none
         distro: none
-        base_image: ghcr.io/${{ github.repository }}/run-on-arch-${{ github.repository_owner }}-${{ github.event.repository.name }}-build-container-aarch64-ubuntu-latest:latest
+        base_image: ghcr.io/${{ github.repository }}/run-on-arch-${{ github.repository_owner }}-${{ github.event.repository.name }}-build-container-aarch64-ubuntu-latest:latest # built from build-container.yaml
         setup: |
           grep -q ${{ matrix.package }} ${PWD}/3p-package-source/package_build_list_host_linux.json || rm ${PWD}/3p-package-source/package_build_list_host_linux.json
         dockerRunArgs: |
@@ -200,7 +200,7 @@ jobs:
           sccache -z
           ls -lah /workspace
           python3 /scripts/o3de_package_scripts/build_package.py --search_path /source/ ${{ matrix.package }}
-
+          
     - name: Upload packages
       uses: actions/upload-artifact@v3
       with:
@@ -235,4 +235,4 @@ jobs:
         with:
           directories: .
           options: -r
-          
+  
