--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -21,7 +21,7 @@ jobs:
     - name: Checkout 3P source repo
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0
+        ref: ${{ github.event.pull_request.head.sha }}
           
     - name: Get package and platform from JSON changes
       id: detect-platform
@@ -85,7 +85,7 @@ jobs:
     - name: Checkout 3P source repo
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0
+        ref: ${{ github.event.pull_request.head.sha }}
         
     - name: Check if package already exists in prod
       env:
