--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -21,7 +21,7 @@ jobs:
     - name: Checkout 3P source repo
       uses: actions/checkout@v4
       with:
-        fetch-depth: 2
+        fetch-depth: 0
           
     - name: Get package and platform from JSON changes
       id: detect-platform
@@ -85,7 +85,7 @@ jobs:
     - name: Checkout 3P source repo
       uses: actions/checkout@v4
       with:
-        fetch-depth: 2
+        fetch-depth: 0
         
     - name: Check if package already exists in prod
       env:
@@ -123,6 +123,8 @@ jobs:
       uses: actions/checkout@v4
       with:
         path: 3p-package-source
+        ref: ${{ github.event.pull_request.head.sha }}
+        fetch-depth: 2
     
     - name: Checkout 3P scripts repo
       uses: actions/checkout@v4
