--- a/.github/workflows/promote-packages.yaml
+++ b/.github/workflows/promote-packages.yaml
@@ -5,7 +5,12 @@ name: Promote 3P Packages
 on:
   # Allows you to run this workflow manually from the Actions tag
   workflow_dispatch:
-
+    inputs:
+      PR-num:
+        type: string
+        required: false
+        description: PR to pull from. Leave blank to pull from last successful run
+        
   push:
     branches:
       - main
@@ -28,6 +33,7 @@ jobs:
         with:
           workflow: build-pr-packages.yaml
           workflow_conclusion: success
+          pr: ${{ inputs.PR-num }}
           commit: ${{github.event.pull_request.head.sha}}
           check_artifacts: true
           path: ${{ env.PACKAGE_PATH }}
