--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -158,8 +158,8 @@ jobs:
         restore-keys:
           ${{ matrix.package }}-${{ matrix.os }}
         
-    - name: Run build command (windows)
-      if: contains(matrix.package, 'windows')
+    - name: Run build command
+      if: ${{ !contains(matrix.package, 'aarch64') }}
       env:
         CMAKE_CXX_COMPILER_LAUNCHER: sccache
         CMAKE_C_COMPILER_LAUNCHER: sccache
@@ -167,16 +167,8 @@ jobs:
       run: |
         python3 3p-package-scripts/o3de_package_scripts/build_package.py --search_path 3p-package-source ${{ matrix.package }}
     
-    - name: Run build command (linux/mac)
-      if: contains(matrix.package, 'linux') && ${{ !contains(matrix.package, 'aarch64') }}
-      env:
-        CMAKE_CXX_COMPILER_LAUNCHER: sccache
-        CMAKE_C_COMPILER_LAUNCHER: sccache
-      run: |
-        python3 3p-package-scripts/o3de_package_scripts/build_package.py --search_path 3p-package-source ${{ matrix.package }}
-    
-    - name: Run build command (linux aarch64)
-      if: contains(matrix.package, 'linux') && contains(matrix.package, 'aarch64')
+    - name: Run build command (aarch64)
+      if: contains(matrix.package, 'aarch64')
       uses: uraimo/run-on-arch-action@v2.5.1
       with:
         arch: none
