--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -34,7 +34,7 @@ jobs:
             PLATFORM=$(echo $FILE | sed -n 's/package_build_list_host_\(.*\).json/\1/p')
             case $PLATFORM in
             linux*)
-              OS_RUNNER="ubuntu-latest"
+              OS_RUNNER="ubuntu-20.04"
               ;;
             windows)
               OS_RUNNER="windows-2019"
