--- a/.github/workflows/build-package.yaml
+++ b/.github/workflows/build-package.yaml
@@ -4,9 +4,6 @@ name: Build 3P Packages
 
 on:
   pull_request:
-    branches:
-      - main
-      - development
     paths:
       - 'package_build_list_host_*.json'
 
@@ -34,7 +31,7 @@ jobs:
             PLATFORM=$(echo $FILE | sed -n 's/package_build_list_host_\(.*\).json/\1/p')
             case $PLATFORM in
             linux*)
-              OS_RUNNER="ubuntu-latest"
+              OS_RUNNER="ubuntu-20.04"
               ;;
             windows)
               OS_RUNNER="windows-2019"
