--- a/.github/workflows/build-container.yaml
+++ b/.github/workflows/build-container.yaml
@@ -6,9 +6,6 @@ on:
   workflow_dispatch: 
 
   push:
-    branches:
-      - main
-      - development
     paths:
       - .github/workflows/build-container.yaml
 
@@ -29,7 +26,7 @@ jobs:
             GITHUB_WORKFLOW: ${{ github.workflow }}
             SCCACHE_VER: 0.5.4
           arch: aarch64
-          distro: ubuntu_latest
+          distro: ubuntu20.04
           githubToken: ${{ github.token }}
           shell: /bin/bash
           install: |
