--- a/.github/workflows/build-container.yaml
+++ b/.github/workflows/build-container.yaml
@@ -25,18 +25,29 @@ jobs:
           env: |
             GITHUB_WORKFLOW: ${{ github.workflow }}
             SCCACHE_VER: 0.5.4
+            CMAKE_VER: 3.27.6
           arch: aarch64
           distro: ubuntu20.04
           githubToken: ${{ github.token }}
           shell: /bin/bash
           install: |
             apt-get update
-            apt-get install -y build-essential cmake curl git libssl-dev libffi-dev libbz2-dev libgdbm-compat-dev libgdbm-dev liblzma-dev libreadline-dev libtool \
+            apt-get install -y build-essential curl git libssl-dev libffi-dev libbz2-dev libgdbm-compat-dev libgdbm-dev liblzma-dev libreadline-dev libtool \
               ninja-build python3 python3-pip tcl8.6-dev tk8.6-dev texinfo software-properties-common
             python3 -m pip install boto3 certifi
-            curl -L 'https://github.com/mozilla/sccache/releases/download/v0.5.4/sccache-v0.5.4-aarch64-unknown-linux-musl.tar.gz' \
+            ## Install sccache
+            wget "https://github.com/mozilla/sccache/releases/download/v${SCCACHE_VER}/sccache-v${SCCACHE_VER}-aarch64-unknown-linux-musl.tar.gz" \
               | tar xzf - -O --wildcards '*/sccache' > '/usr/local/bin/sccache'
             chmod +x '/usr/local/bin/sccache'
+              && rm -rf /var/lib/apt/lists/* \
+            ## Install cmake  
+            wget "https://github.com/Kitware/CMake/releases/download/v${CMAKE_VER}/cmake-${CMAKE_VER}-Linux-x86_64.sh" \
+              -q -O /tmp/cmake-install.sh \
+              && chmod u+x /tmp/cmake-install.sh \
+              && mkdir /opt/cmake-${CMAKE_VER} \
+              && /tmp/cmake-install.sh --skip-license --prefix=/opt/cmake-${CMAKE_VER} \
+              && rm /tmp/cmake-install.sh \
+              && ln -s /opt/cmake-${CMAKE_VER}/bin/* /usr/local/bin
           run: |
             lsb_release -a
             uname -a
