--- a/.github/workflows/build-container.yaml
+++ b/.github/workflows/build-container.yaml
@@ -24,13 +24,15 @@ jobs:
         with:
           env: |
             GITHUB_WORKFLOW: ${{ github.workflow }}
-            SCCACHE_VER: 0.5.4
-            CMAKE_VER: 3.27.6
           arch: aarch64
           distro: ubuntu20.04
           githubToken: ${{ github.token }}
           shell: /bin/bash
           install: |
+            ## Set variables. "env" not supported in install phase
+            export SCCACHE_VER=0.5.4
+            export CMAKE_VER=3.27.6
+            ## Install build dependancies from apt
             apt-get update
             apt-get install -y build-essential curl git libssl-dev libffi-dev libbz2-dev libgdbm-compat-dev libgdbm-dev liblzma-dev libreadline-dev libtool \
               ninja-build python3 python3-pip tcl8.6-dev tk8.6-dev texinfo software-properties-common
