--- a/.github/workflows/build-container.yaml
+++ b/.github/workflows/build-container.yaml
@@ -38,13 +38,13 @@ jobs:
               ninja-build python3 python3-pip tcl8.6-dev tk8.6-dev texinfo software-properties-common wget
             python3 -m pip install boto3 certifi
             ## Install sccache
-            wget "https://github.com/mozilla/sccache/releases/download/v${SCCACHE_VER}/sccache-v${SCCACHE_VER}-aarch64-unknown-linux-musl.tar.gz" \
+            wget -qO- "https://github.com/mozilla/sccache/releases/download/v${SCCACHE_VER}/sccache-v${SCCACHE_VER}-aarch64-unknown-linux-musl.tar.gz" \
               | tar xzf - -O --wildcards '*/sccache' > '/usr/local/bin/sccache'
             chmod +x '/usr/local/bin/sccache'
               && rm -rf /var/lib/apt/lists/* \
             ## Install cmake  
-            wget "https://github.com/Kitware/CMake/releases/download/v${CMAKE_VER}/cmake-${CMAKE_VER}-Linux-x86_64.sh" \
-              -q -O /tmp/cmake-install.sh \
+            wget -q "https://github.com/Kitware/CMake/releases/download/v${CMAKE_VER}/cmake-${CMAKE_VER}-Linux-x86_64.sh" \
+              -O /tmp/cmake-install.sh \
               && chmod u+x /tmp/cmake-install.sh \
               && mkdir /opt/cmake-${CMAKE_VER} \
               && /tmp/cmake-install.sh --skip-license --prefix=/opt/cmake-${CMAKE_VER} \
