--- a/.github/workflows/build-container.yaml
+++ b/.github/workflows/build-container.yaml
@@ -40,8 +40,8 @@ jobs:
               ninja-build python3 python3-pip tcl8.6-dev tk8.6-dev texinfo software-properties-common wget
             python3 -m pip install boto3 certifi
             # Install Clang/GCC at specific version
-            update-alternatives --remove-all gcc 
-            update-alternatives --remove-all g++
+            #update-alternatives --remove-all gcc 
+            #update-alternatives --remove-all g++
             apt-get install clang-${CLANG_VER} gcc-${GCC_VER} g++-${GCC_VER}
             update-alternatives --set gcc /usr/bin/gcc-${GCC_VER}
             update-alternatives --set g++ /usr/bin/g++-${GCC_VER}
