--- a/.github/workflows/build-container.yaml
+++ b/.github/workflows/build-container.yaml
@@ -40,11 +40,9 @@ jobs:
               ninja-build python3 python3-pip tcl8.6-dev tk8.6-dev texinfo software-properties-common wget
             python3 -m pip install boto3 certifi
             # Install Clang/GCC at specific version
-            #update-alternatives --remove-all gcc 
-            #update-alternatives --remove-all g++
             apt-get install -y clang-${CLANG_VER} gcc-${GCC_VER} g++-${GCC_VER}
-            update-alternatives --set gcc /usr/bin/gcc-${GCC_VER}
-            update-alternatives --set g++ /usr/bin/g++-${GCC_VER}
+            update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-${GCC_VER} 10
+            update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-${GCC_VER} 10
             ## Install sccache
             wget -qO- "https://github.com/mozilla/sccache/releases/download/v${SCCACHE_VER}/sccache-v${SCCACHE_VER}-aarch64-unknown-linux-musl.tar.gz" \
               | tar xzf - -O --wildcards '*/sccache' > '/usr/local/bin/sccache' \
