--- a/.github/workflows/build-package.yaml
+++ b/.github/workflows/build-package.yaml
@@ -116,20 +116,20 @@ jobs:
     - name: Configure
       id: configure
       run: |
-        git config --system core.longpaths true
+        git config --global core.longpaths true
         echo "uid_gid=$(id -u):$(id -g)" >> $GITHUB_OUTPUT
       
     - name: Checkout 3P source repo
       uses: actions/checkout@v4
       with:
-        path: 3p-package-source
+        path: source
         fetch-depth: 0
     
     - name: Checkout 3P scripts repo
       uses: actions/checkout@v4
       with:
         repository: o3de/3p-package-scripts
-        path: 3p-package-scripts
+        path: scripts
       
     - name: Update python
       uses: actions/setup-python@v4
@@ -176,7 +176,7 @@ jobs:
         CMAKE_C_COMPILER_LAUNCHER: sccache
         CMAKE_GENERATOR: Ninja # ccache/sccache cannot be used as the compiler launcher under cmake if the generator is MSBuild
       run: |
-        python3 3p-package-scripts/o3de_package_scripts/build_package.py --search_path 3p-package-source ${{ matrix.package }}
+        python3 scripts/o3de_package_scripts/build_package.py --search_path source ${{ matrix.package }}
 
     - name: Run build command (aarch64)
       if: contains(matrix.package, 'aarch64')
@@ -186,13 +186,13 @@ jobs:
         distro: none
         base_image: ghcr.io/${{ github.repository }}/run-on-arch-${{ github.repository_owner }}-${{ github.event.repository.name }}-build-container-aarch64-ubuntu20-04:latest # built from build-container.yaml
         setup: |
-          grep -q ${{ matrix.package }} ${PWD}/3p-package-source/package_build_list_host_linux.json || rm ${PWD}/3p-package-source/package_build_list_host_linux.json
+          grep -q ${{ matrix.package }} ${PWD}/source/package_build_list_host_linux.json || rm ${PWD}/source/package_build_list_host_linux.json
         dockerRunArgs: |
           --platform=linux/arm64 
           --user ${{ steps.configure.outputs.uid_gid }}
           --volume "${PWD}:/workspace"
-          --volume "${PWD}/3p-package-scripts:/scripts"
-          --volume "${PWD}/3p-package-source:/source"
+          --volume "${PWD}/scripts:/scripts"
+          --volume "${PWD}/source:/source"
         env: |
           CMAKE_CXX_COMPILER_LAUNCHER: sccache
           CMAKE_C_COMPILER_LAUNCHER: sccache
@@ -212,7 +212,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: ${{ matrix.package }}
-        path: 3p-package-source/packages/*
+        path: source/packages/*
 
   validate-packages:
     name: Validating ${{ matrix.package }}
