--- a/.github/workflows/build-package.yaml
+++ b/.github/workflows/build-package.yaml
@@ -52,8 +52,9 @@ jobs:
             fi
           
             PACKAGE=$(echo $DIFF | cut -d'"' -f2)
-      
-            JSONline="{\"package\": \"$PACKAGE\", \"os\": \"$OS_RUNNER\"},"
+            PACKPATH=$(echo $DIFF | egrep -o "package-system/[^ ]*")
+            DOCKER=$(test -f "$PACKPATH/Dockerfile" && echo 1)
+            JSONline="{\"package\": \"$PACKAGE\", \"os\": \"$OS_RUNNER\", \"dockerfile\": \"$DOCKER\"},"
             if [[ "$JSON" != *"$JSONline"* ]]; then
               JSON="$JSON$JSONline"
             fi
@@ -165,9 +166,15 @@ jobs:
         key: ${{ matrix.package }}-${{ matrix.os }}
         restore-keys:
           ${{ matrix.package }}-${{ matrix.os }}
-        
+
+    - name: Set up QEMU (aarch64) # Only if the package folder contains a Dockerfile
+      if: ${{ (contains(matrix.package, 'aarch64')) && (matrix.dockerfile == '1') }}
+      uses: docker/setup-qemu-action@v3
+      with:
+        platforms: arm64
+
     - name: Run build command
-      if: ${{ !contains(matrix.package, 'aarch64') }}
+      if: ${{ matrix.dockerfile != '1') }}
       env:
         CMAKE_CXX_COMPILER_LAUNCHER: sccache
         CMAKE_C_COMPILER_LAUNCHER: sccache
@@ -175,8 +182,8 @@ jobs:
       run: |
         python3 scripts/o3de_package_scripts/build_package.py --search_path source ${{ matrix.package }}
 
-    - name: Run build command (aarch64)
-      if: contains(matrix.package, 'aarch64')
+    - name: Run build command (aarch64) # Generic build for packages without a Dockerfile
+      if: ${{ (contains(matrix.package, 'aarch64')) && (matrix.dockerfile != '1') }}
       uses: uraimo/run-on-arch-action@v2.5.1
       with:
         arch: none
