--- a/.github/workflows/build-package.yaml
+++ b/.github/workflows/build-package.yaml
@@ -53,7 +53,7 @@ jobs:
           
             PACKAGE=$(echo $DIFF | cut -d'"' -f2)
             PACKPATH=$(echo $DIFF | egrep -o "package-system/[^ ]*")
-            DOCKER=$(test -f "$PACKPATH/Dockerfile" && echo 1)
+            DOCKER=$(test -f "$PACKPATH/Dockerfile" && echo 1 || echo 0)
             JSONline="{\"package\": \"$PACKAGE\", \"os\": \"$OS_RUNNER\", \"dockerfile\": \"$DOCKER\"},"
             if [[ "$JSON" != *"$JSONline"* ]]; then
               JSON="$JSON$JSONline"
