--- a/.github/workflows/build-package.yaml
+++ b/.github/workflows/build-package.yaml
@@ -174,7 +174,7 @@ jobs:
         platforms: arm64
 
     - name: Run build command
-      if: matrix.dockerfile != '1'
+      if: ! ${{ ! (contains(matrix.package, 'aarch64')) && (matrix.dockerfile != '1') }}
       env:
         CMAKE_CXX_COMPILER_LAUNCHER: sccache
         CMAKE_C_COMPILER_LAUNCHER: sccache
