--- a/.github/workflows/build-package.yaml
+++ b/.github/workflows/build-package.yaml
@@ -157,6 +157,7 @@ jobs:
         sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-${{ env.CLANG_VER }} 10
         sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-${{ env.GCC_VER }} 10
         sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-${{ env.GCC_VER }} 10
+        sudo apt-get install -y qemu
 
     - name: Use sccache
       uses: hendrikmuhs/ccache-action@v1.2.10
