--- a/.github/workflows/build-package.yaml
+++ b/.github/workflows/build-package.yaml
@@ -157,7 +157,7 @@ jobs:
         sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-${{ env.CLANG_VER }} 10
         sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-${{ env.GCC_VER }} 10
         sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-${{ env.GCC_VER }} 10
-        sudo apt-get install -y qemu
+        
 
     - name: Use sccache
       uses: hendrikmuhs/ccache-action@v1.2.10
@@ -170,9 +170,8 @@ jobs:
 
     - name: Set up QEMU (aarch64) # Only if the package folder contains a Dockerfile
       if: ${{ (contains(matrix.package, 'aarch64')) && (matrix.dockerfile == '1') }}
-      uses: docker/setup-qemu-action@v3
-      with:
-        platforms: arm64
+      run: |
+        sudo apt-get install -y qemu qemu-user-static
 
     - name: Run build command
       if: ${{ (!contains(matrix.package, 'aarch64')) || (matrix.dockerfile == '1') }}
