--- a/.github/workflows/build-package.yaml
+++ b/.github/workflows/build-package.yaml
@@ -54,7 +54,7 @@ jobs:
             echo DIFF: $DIFF
             PACKAGE=$(echo $DIFF | cut -d'"' -f2)
             echo PACKAGE: $PACKAGE
-            PACKPATH=$(echo $DIFF | egrep -o 'package-system/[^/ ]+(?=/| )')
+            PACKPATH=$(echo $DIFF | egrep -o "package-system/[^/ ]+(?=/| )" | head -n 1)
             echo PACKPATH: $PACKPATH
             DOCKER=$(test -e $PACKPATH/Dockerfile* && echo 1 || echo 0) # Assume the build scripts will use the Dockerfile if found in the package path
             JSONline="{\"package\": \"$PACKAGE\", \"os\": \"$OS_RUNNER\", \"dockerfile\": \"$DOCKER\"},"
